etc/kubernetes/manifests/hasher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  ports:
    -
      port: 8080
      protocol: TCP
  selector:
    app: hasher-label
