etc/kubernetes/manifests/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
spec:
  ingress: 
    -
      from: 
        -
          namespaceSelector:
            matchLabels:
              name: mj-dockercoins
        -
           #pod que estamos dando paso
           podSelector:
            matchLabels:
              app: worker-label
        -
           podSelector:
            matchLabels:
              app: webui-label
      ports:
        -
          port: 6379
          protocol: TCP
  #pod que estamos protegiendo
  podSelector: 
    matchLabels: 
      app: redis-label
  policyTypes:
    - Ingress
