etc/kubernetes/manifests/rng-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng-netpol
spec:
  ingress: 
    -
      from: 
        -
          namespaceSelector:
            matchLabels:
              name: mj-dockercoins
        -
          podSelector:
            matchLabels:
              app: worker-label
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector: 
    matchLabels: 
      app: rng-label
  policyTypes:
    - Ingress
